# upbank-client

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
config/: upbank.yaml
pipelines/: extract.py
pipelines/extract/: upbank.py
src/api/: client.py  config.py
src/utils/: yaml.py
tests/: test_api.py
