[tool.poetry]
name = "personal"
version = "0.1.0"
description = ""
authors = ["Noel Borneo <born.angelonoel@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dlt = {extras = ["filesystem"], version = "^1.5.0"}
black = "^24.10.0"
loguru = "^0.7.3"
alive-progress = "^3.2.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.41.1"
duckdb = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
